--- a/src/main/resources/templates/publications.html
+++ b/src/main/resources/templates/publications.html
@@ -32,6 +32,27 @@
             <td><a class="btn btn-danger" href="" role="button">Удалить</a></td>
         </tr>
     </table>
+    <hr>
+    <table class="table table-striped table-hover mt-3">
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Заголовок</th>
+            <th scope="col">Описание</th>
+            <th scope="col">Изображение</th>
+            <th scope="col">Дата</th>
+            <th scope="col">Источник</th>
+        </tr>
+        <tr th:each="el : ${publicationsSG}">
+            <td th:text="${el.id}"/>
+            <td th:text="${el.title}"/>
+            <td th:text="${el.text}"/>
+            <td th:text="${el.image}"/>
+            <td th:text="${el.date}"/>
+            <td th:text="${el.sourceName}"/>
+            <td><a class="btn btn-primary" th:href="@{${el.sourceLink}}" role="button">К источнику</a></td>
+            <td><a class="btn btn-success" th:href="@{/publicationSave/(tittle=${el.title}, text=${el.text}, image=${el.image}, date=${el.date}, sourceLink=${el.sourceLink}, sourceName=${el.sourceName})}" role="button">Сохранить</a></td>
+        </tr>
+    </table>
 </div>
 </body>
 </html>
