--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Лента</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/list.css">
+    <title>Главная страница</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Главная страница</h1>
+<div class="p-4 p-md-5 mb-4 text-white rounded bg-success text-dark">
+    <div class="col-md-6 px-0">
+        <h1 class="display-4 fst-italic">Сделай свой город чище!</h1>
+        <p class="lead my-3">Наше приложение позволит сообщить о загрязнении всего в пару кликов</p>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row featurette">
+        <div class="col-md-10">
+            <h2 class="featurette-heading">Лишь несколько шагов и твоя метка окажется на карте!</h2>
+            <p class="lead">1. Отметь на карте место загрязнения</p>
+            <p class="lead">2. Прикрепи фото</p>
+            <p class="lead">3. Опиши проблему</p>
+            <p class="lead">4. Выбери подходящую категорию и уровень загрязнения</p>
+            <a class="btn btn-outline-success btn-lg px-4 gap-3" href="/publications" role="button">Попробуй уже сейчас!</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
