--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 <div class="p-4 p-md-5 mb-4 text-white rounded bg-success text-dark">
     <div class="col-md-6 px-0">
         <h1 class="display-4 fst-italic">Сделай свой город чище!</h1>
