--- a/src/main/resources/templates/publicationAdd.html
+++ b/src/main/resources/templates/publicationAdd.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/form.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 <div class="container mt-5 mb-5">
     <h3>Создание публикации</h3>
     <form th:object="${publication}" id="form" method="post">
