--- a/src/main/resources/templates/publications.html
+++ b/src/main/resources/templates/publications.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/list.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 <div class="mx-2">
     <th scope="col">Лента новостей</th>
     <a href="/publicationAdd" role="button">Добавить публикацию</a>
