--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body class="mx-2">
+<header th:insert="blocks/header :: header"></header>
 <h2>Регистрация</h2>
 <div th:if="${message}">
     <b th:text="${message}"></b>
