Favorites functional added. New interface

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,19 +9,15 @@
 <header th:insert="blocks/header :: header"></header>
 <div class="p-4 p-md-5 mb-4 text-white rounded bg-success text-dark">
     <div class="col-md-6 px-0">
-        <h1 class="display-4 fst-italic">Сделай свой город чище!</h1>
-        <p class="lead my-3">Наше приложение позволит сообщить о загрязнении всего в пару кликов</p>
+        <h1 class="display-4 fst-italic">Все источники в одном месте</h1>
+        <p class="lead my-3">Наше приложение позволит тебе собирать публикации из разных источников</p>
     </div>
 </div>
 
 <div class="container-fluid">
     <div class="row featurette">
         <div class="col-md-10">
-            <h2 class="featurette-heading">Лишь несколько шагов и твоя метка окажется на карте!</h2>
-            <p class="lead">1. Отметь на карте место загрязнения</p>
-            <p class="lead">2. Прикрепи фото</p>
-            <p class="lead">3. Опиши проблему</p>
-            <p class="lead">4. Выбери подходящую категорию и уровень загрязнения</p>
+            <h2 class="featurette-heading">Простое и удобное решение</h2>
             <a class="btn btn-outline-success btn-lg px-4 gap-3" href="/publications" role="button">Попробуй уже сейчас!</a>
         </div>
     </div>
