--- a/src/main/resources/templates/favorites.html
+++ b/src/main/resources/templates/favorites.html
@@ -9,7 +9,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="mx-2">
-    <h2>Лента новостей</h2>
+    <th scope="col">Лента новостей</th>
     <hr>
     <table class="table table-striped table-hover mt-3">
         <tr>
@@ -17,12 +17,15 @@
             <th scope="col">Дата</th>
             <th scope="col">Источник</th>
         </tr>
-        <tr th:each="el : ${publicationsSG}">
+        <tr th:each="el : ${publications}">
+            <td th:text="${el.id}"/>
             <td th:text="${el.title}"/>
+            <td th:text="${el.text}"/>
+            <td th:text="${el.image}"/>
             <td th:text="${el.date}"/>
             <td th:text="${el.sourceName}"/>
             <td><a class="btn btn-primary" th:href="@{${el.sourceLink}}" role="button">К источнику</a></td>
-            <td><a class="btn btn-success" th:href="@{/publicationFavoriteSave/(title=${el.title}, text=${el.text}, image=${el.image}, date=${el.date}, sourceLink=${el.sourceLink}, sourceName=${el.sourceName})}" role="button">Сохранить</a></td>
+<!--            <td><a class="btn btn-danger" th:href="@{${el.sourceLink}}" role="button">Удалить</a></td>-->
         </tr>
     </table>
 </div>
