--- a/src/main/resources/templates/favorites.html
+++ b/src/main/resources/templates/favorites.html
@@ -9,7 +9,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="mx-2">
-    <th scope="col">Лента новостей</th>
+    <h2>Избранное</h2>
     <hr>
     <table class="table table-striped table-hover mt-3">
         <tr>
