--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="p-4 p-md-5 mb-4 text-white rounded bg-success text-dark">
-    <div class="col-md-6 px-0">
+    <div class="col-md-8 px-0">
         <h1 class="display-4 fst-italic">Все источники в одном месте</h1>
         <p class="lead my-3">Наше приложение позволит тебе собирать публикации из разных источников</p>
     </div>
@@ -19,6 +19,7 @@
         <div class="col-md-10">
             <h2 class="featurette-heading">Простое и удобное решение</h2>
             <a class="btn btn-outline-success btn-lg px-4 gap-3" href="/publications" role="button">Попробуй уже сейчас!</a>
+            <a class="btn btn-outline-success btn-lg px-4 gap-3" href="/getPaymentWidget?value=25" role="button">Оплата</a>
         </div>
     </div>
 </div>
