DTF parse add. All users page

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -12,6 +12,7 @@
             <ul class="nav nav-pills">
                 <a class="me-3 py-2 text-dark text-decoration-none" href="/home">Главная</a>
                 <a class="me-3 py-2 text-dark text-decoration-none" href="/publications">Новости</a>
+                <a class="me-3 py-2 text-dark text-decoration-none" href="/getPaymentWidget?value=100" role="button">Купить подписку</a>
                 <a class="me-3 py-2 text-dark text-decoration-none" href="/profile">Профиль</a>
                 <a class="me-3 py-2 text-dark text-decoration-none" href="/about">О приложении</a>
                 <a href="/publications" class="btn btn-success" role="button">Войти</a>
