--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -9,20 +9,21 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="mx-2">
-    <h2>Избранное</h2>
+    <h2 class="mb-4">Пользователи</h2>
     <hr>
     <table class="table table-striped table-hover mt-3">
         <tr>
-            <th scope="col">Заголовок</th>
-            <th scope="col">Дата</th>
-            <th scope="col">Источник</th>
+            <th scope="col">ID</th>
+            <th scope="col">Логин</th>
+            <th scope="col">Подписка</th>
+            <th scope="col">Роль</th>
         </tr>
-        <tr th:each="el : ${publications}">
-            <td th:text="${el.title}"/>
-            <td th:text="${el.date}"/>
-            <td th:text="${el.sourceName}"/>
-            <td><a class="btn btn-primary" th:href="@{${el.sourceLink}}" role="button">К источнику</a></td>
-<!--            <td><a class="btn btn-danger" th:href="@{${el.sourceLink}}" role="button">Удалить</a></td>-->
+        <tr th:each="el : ${userList}">
+            <td th:text="${el.id}"/>
+            <td th:text="${el.login}"/>
+            <td th:text="${el.subscribed}"/>
+            <td th:text="${el.role.name}"/>
+            <td><a class="btn btn-danger" th:href="@{userDelete/{id}(id=${el.id})}" role="button">Удалить</a></td>
         </tr>
     </table>
 </div>
