--- a/src/main/resources/templates/publications.html
+++ b/src/main/resources/templates/publications.html
@@ -9,7 +9,15 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="mx-2">
-    <h2>Лента новостей</h2>
+    <h2 class="mb-4">Лента новостей</h2>
+    <div class="row">
+        <div class="col-auto mr-3">
+            <a class="btn btn-primary" href="/publications" role="button">StopGame.ru</a>
+        </div>
+        <div class="col-auto">
+            <a class="btn btn-primary" th:if="${user.subscribed}" href="/publications/dtf" role="button">DTF</a>
+        </div>
+    </div>
     <hr>
     <table class="table table-striped table-hover mt-3">
         <tr>
