--- a/src/main/resources/templates/publications_dtf.html
+++ b/src/main/resources/templates/publications_dtf.html
@@ -9,7 +9,15 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="mx-2">
-    <h2>Избранное</h2>
+    <h2 class="mb-4">Лента новостей</h2>
+    <div class="row">
+        <div class="col-auto mr-3">
+            <a class="btn btn-primary" href="/publications" role="button">StopGame.ru</a>
+        </div>
+        <div class="col-auto">
+            <a class="btn btn-primary" th:if="${user.subscribed}" href="/publications/dtf" role="button">DTF</a>
+        </div>
+    </div>
     <hr>
     <table class="table table-striped table-hover mt-3">
         <tr>
@@ -17,12 +25,12 @@
             <th scope="col">Дата</th>
             <th scope="col">Источник</th>
         </tr>
-        <tr th:each="el : ${publications}">
+        <tr th:each="el : ${publicationsDTF}">
             <td th:text="${el.title}"/>
             <td th:text="${el.date}"/>
             <td th:text="${el.sourceName}"/>
             <td><a class="btn btn-primary" th:href="@{${el.sourceLink}}" role="button">К источнику</a></td>
-<!--            <td><a class="btn btn-danger" th:href="@{${el.sourceLink}}" role="button">Удалить</a></td>-->
+            <td><a class="btn btn-success" th:href="@{/publicationFavoriteSave/(title=${el.title}, text=${el.text}, image=${el.image}, date=${el.date}, sourceLink=${el.sourceLink}, sourceName=${el.sourceName})}" role="button">Сохранить</a></td>
         </tr>
     </table>
 </div>
